fixtures/parser/invalid/classes_invalid.php
<?php
// invalid: class declaration is missing a body

class MissingBody
